[gd_scene load_steps=14 format=2]

[ext_resource path="res://Labyrinth/HolyRoom/Altar.png" type="Texture" id=1]
[ext_resource path="res://Labyrinth/CandleFireParticle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Labyrinth/HolyRoom/HealingHitbox.gd" type="Script" id=3]
[ext_resource path="res://Labyrinth/Light2D.gd" type="Script" id=4]
[ext_resource path="res://Player/Sprites/light.png" type="Texture" id=5]
[ext_resource path="res://CollectableObjects/spotlight_4.png" type="Texture" id=6]
[ext_resource path="res://Labyrinth/spotlight_1.png" type="Texture" id=7]
[ext_resource path="res://Sounds/FX/Healroom.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 113.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.5, 8.5 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.00803213, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.881526, 0 ), -0.0940733, 0.0, 0, 0 ]

[node name="HolyRoom" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 1 )

[node name="CandleFireParticle" parent="." instance=ExtResource( 2 )]
position = Vector2( 31, -67 )

[node name="HealingHitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 10 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealingHitbox"]
position = Vector2( -1, -29 )
shape = SubResource( 1 )

[node name="HealingTimer" type="Timer" parent="HealingHitbox"]

[node name="Body2D" type="StaticBody2D" parent="."]
position = Vector2( 210, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body2D"]
position = Vector2( -208.5, -28.5 )
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.258824 )
show_behind_parent = true
material = SubResource( 3 )
position = Vector2( 0, -20 )
amount = 1
texture = ExtResource( 7 )
gravity = Vector2( 0, 0 )
scale_amount = 2.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1, -40 )
texture = ExtResource( 5 )
texture_scale = 2.5
shadow_enabled = true
shadow_gradient_length = 2.0
shadow_filter = 2
shadow_filter_smooth = 20.0
script = ExtResource( 4 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
material = SubResource( 4 )
position = Vector2( 0, -24 )
amount = 4
lifetime = 0.3
speed_scale = 0.3
randomness = 0.09
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 39.5
direction = Vector2( 0, 0 )
spread = 1.83
gravity = Vector2( 0, 0 )
orbit_velocity = 0.03
orbit_velocity_random = 0.06
radial_accel = 96.09
scale_amount = 0.15
scale_amount_curve = SubResource( 5 )
color = Color( 0.941176, 0.968627, 0.623529, 1 )

[node name="HolyRoomSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -3.0
autoplay = true
attenuation = 3.21532

[connection signal="body_entered" from="HealingHitbox" to="HealingHitbox" method="_on_HealingHitbox_body_entered"]
[connection signal="body_exited" from="HealingHitbox" to="HealingHitbox" method="_on_HealingHitbox_body_exited"]
[connection signal="timeout" from="HealingHitbox/HealingTimer" to="HealingHitbox" method="_on_HealingTimer_timeout"]
